force-app/main/default/objects/Ham_Events_Metadata__mdt/Ham_Events_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Ham Events Metadata</label>
    <pluralLabel>Ham Events Metadata</pluralLabel>
</CustomObject>