force-app/main/default/objects/Ham_Events_Metadata__mdt/fields/Field_Retrievable__c.field-meta.xml
<CustomField>
    <fullName>Field_Retrievable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only checked fields are retrieved</description>
    <inlineHelpText>Only checked fields are retrieved</inlineHelpText>
    <label>Field Retrievable?</label>
    <type>Checkbox</type>
</CustomField>