force-app/main/default/objects/Ham_Events_Metadata__mdt/fields/Object_Active__c.field-meta.xml
<CustomField>
    <fullName>Object_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only checked object records are retrieved</description>
    <inlineHelpText>Only checked object records are retrieved</inlineHelpText>
    <label>Object Active?</label>
    <type>Checkbox</type>
</CustomField>